--- a/src/Component/SpaceshipConfigurator.module.scss
+++ b/src/Component/SpaceshipConfigurator.module.scss
@@ -1,5 +1,14 @@
 @import "src/Variable";
 
+
+.configuratorWrapper {
+    padding: 2% 1% 1%;
+}
 .title {
+    text-align: center;
+    font-weight: 400;
     color: $primary-font-color;
+    letter-spacing: 0.2em;
+    font-size: 1.5em;
+    line-height: 2em;
 }
