styled wrapper and card and grid styles

--- a/src/Component/SpaceshipConfigurator.module.scss
+++ b/src/Component/SpaceshipConfigurator.module.scss
@@ -3,11 +3,8 @@
 
 .Wrapper {
     padding: 2% 1% 1%;
-}
-.configuratorWrapper {
-    display: flex;
-    flex-direction: row;
-
+    height: 848px;
+    width: 944px;
 }
 .title {
     text-align: center;
