--- a/src/index.scss
+++ b/src/index.scss
@@ -3,12 +3,9 @@
   box-sizing: border-box;
 }
 
-html {
-  font-family: sans-serif;
-}
-
 body {
   margin: 0;
   background: #051544;
   font-family: $primary-font-family;
+  color: $primary-font-color;
 }
