--- a/src/Component/UI/grid.module.scss
+++ b/src/Component/UI/grid.module.scss
@@ -4,27 +4,28 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  justify-content: center;
   margin-left: -1%;
   margin-right: -1%;
 
-  > .gridCol3 {
+  > .gridCol4 {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     -webkit-box-flex: 0;
-    -ms-flex: 0 0 23%;
-    flex: 0 0 23%;
+    -ms-flex: 0 0 30%;
+    flex: 0 0 30%;
     margin-left: 1%;
     margin-right: 1%;
     margin-bottom: 2%;
   }
 
-  > .gridCol9 {
+  > .gridCol8 {
     backdrop-color: yellow;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     -webkit-box-flex: 0;
-    -ms-flex: 0 0 73%;
-    flex: 0 0 73%;
+    -ms-flex: 0 0 60%;
+    flex: 0 0 60%;
     margin-left: 1%;
     margin-right: 1%;
     margin-bottom: 2%;
