insert content of boxes

--- a/src/Component/SelectableOptions/Box.module.scss
+++ b/src/Component/SelectableOptions/Box.module.scss
@@ -1,5 +1,5 @@
 .boxTitle {
-  margin: 0 auto 1% 2%;
+  margin: auto 1% 2%;
 }
 .boxWrapper {
   display: flex;
@@ -8,4 +8,5 @@
 }
 .box {
   margin: 0 2%;
+  text-align: center;
 }
