--- a/src/Component/UI/grid.module.scss
+++ b/src/Component/UI/grid.module.scss
@@ -4,7 +4,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   margin-left: -1%;
   margin-right: -1%;
 
@@ -14,7 +14,7 @@
     -webkit-box-flex: 0;
     -ms-flex: 0 0 30%;
     flex: 0 0 30%;
-    margin-left: 1%;
+    margin-left: 3%;
     margin-right: 1%;
     margin-bottom: 2%;
   }
@@ -26,7 +26,7 @@
     -webkit-box-flex: 0;
     -ms-flex: 0 0 60%;
     flex: 0 0 60%;
-    margin-left: 1%;
+    margin-left: 3%;
     margin-right: 1%;
     margin-bottom: 2%;
   }
