--- a/src/Variable.scss
+++ b/src/Variable.scss
@@ -1,3 +1,4 @@
 $primary-font-family: Roboto Mono;
 $primary-font-color: #7BF762;
 $unselected-font-color: #5A8F4F;
+$second-background-color: #1C3C16;
