--- a/src/Variable.scss
+++ b/src/Variable.scss
@@ -2,3 +2,8 @@ $primary-font-family: Roboto Mono;
 $primary-font-color: #7BF762;
 $unselected-font-color: #5A8F4F;
 $second-background-color: #1C3C16;
+$border-radius: 8px;
+$white: #fff;
+$orange: #FF7A00;
+$blue: #6BE4FF;
+$border-color: #5A8F4F;
