--- a/src/Component/Receipt.module.scss
+++ b/src/Component/Receipt.module.scss
@@ -11,14 +11,14 @@
     padding: 0 6%;
 
     p {
-
+      line-height: .6em;
       &:last-of-type {
         color: white;
       }
     }
   }
   .total {
-    margin: 0;
+    line-height: 2em;
     font-size: 1.5em;
     border-top: 4px solid $border-color;
   }
