--- a/src/Component/UI/grid.module.scss
+++ b/src/Component/UI/grid.module.scss
@@ -4,7 +4,7 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-start !important;
   margin-left: -1%;
   margin-right: -1%;
 
