--- a/src/Component/UI/Card.module.scss
+++ b/src/Component/UI/Card.module.scss
@@ -8,5 +8,6 @@
 }
 
 .cardActive {
-    border: 3px solid $border-color;
+    border: 1px solid $selected-border-color;
+    box-shadow: 0px 0px 4px 0px #6BE4FF;
 }
