--- a/src/Component/SelectableOptions/Box.module.scss
+++ b/src/Component/SelectableOptions/Box.module.scss
@@ -1,7 +1,7 @@
 @import "src/Variable";
 
 .boxTitle {
-  margin: auto 1% 2%;
+  margin: auto 2% 2%;
 }
 .boxWrapper {
   display: flex;
@@ -11,20 +11,27 @@
 .box {
   margin: 0 2%;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  p {
+    margin: 0.7em;
+  }
 }
 .colorBox {
-  width: 70px;
-  height: 30px;
+  width: 80px;
+  height: 40px;
   border-radius: $border-radius;
   display: flex;
-  margin: 8% auto;
+  margin: 4% auto;
 }
-.snowBox {
-  background-color: $white;
-}
-.volcanoBox {
-  background-color: $orange;
-}
-.skyBox {
-  background-color: $blue;
+.subBox {
+  text-align: left;
+  line-height: 2em;
+  padding: 2em 1.5em;
+  font-size: 0.7em;
+  background-color: $subBox-background-color;
+  box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
+  border-radius: $border-radius;
+  height: 20vh;
 }
