--- a/src/Component/SpaceshipConfigurator.module.scss
+++ b/src/Component/SpaceshipConfigurator.module.scss
@@ -3,8 +3,8 @@
 
 .Wrapper {
     padding: 2% 1% 1%;
-    height: 848px;
-    width: 944px;
+    height: 110vh;
+    width: 70vw;
 }
 .title {
     text-align: center;
