--- a/src/Component/SelectableOptions/Box.module.scss
+++ b/src/Component/SelectableOptions/Box.module.scss
@@ -33,5 +33,5 @@
   background-color: $subBox-background-color;
   box-shadow: 0px 4px 4px rgba(0,0,0,0.25);
   border-radius: $border-radius;
-  height: 20vh;
+  height: 75%;
 }
