--- a/src/Component/Receipt.module.scss
+++ b/src/Component/Receipt.module.scss
@@ -8,17 +8,18 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    padding: 0 6%;
+    padding: 6% 6% 0;
 
     p {
       line-height: .6em;
+      font-size: 1em;
       &:last-of-type {
         color: white;
       }
     }
   }
   .total {
-    line-height: 2em;
+    padding-bottom:2%;
     font-size: 1.5em;
     border-top: 4px solid $border-color;
   }
