--- a/src/Component/SelectableOptions/Box.module.scss
+++ b/src/Component/SelectableOptions/Box.module.scss
@@ -1,28 +1,22 @@
 @import "src/Variable";
 
 .boxTitle {
-  margin: auto 2% 2%;
-}
-.boxWrapper {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 4%;
+  margin: 2% 1% 0;
 }
 .box {
-  margin: 0 2%;
+  height: 100%;
   text-align: center;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
   p {
     margin: 0.7em;
+    font-size: 1em;
   }
 }
 .colorBox {
-  width: 80px;
+  width: 35%;
   height: 40px;
   border-radius: $border-radius;
-  display: flex;
   margin: 4% auto;
 }
 .subBox {
