--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,25 @@
 @import 'Variable';
+
 * {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  background: #051544;
-  font-family: $primary-font-family;
-  color: $primary-font-color;
+  background: #051544 !important;
+  font-family: $primary-font-family !important;
+  color: $primary-font-color !important;
+  font-size: 16px;
   letter-spacing: 0.2em;
+}
+
+@media (max-width: 1024px) {
+  body {
+    font-size: 10px !important;
+  }
+}
+@media (max-width: 550px) {
+  body {
+    font-size: 12px !important;
+  }
 }
